GPencil strokes cannot be edited after set origin #99979

Closed
opened 2022-07-25 21:49:39 +02:00 by Andrew Burke · 18 comments

After changing the origin the strokes cannot be changed in any way using different tools including eraser or sculpt.

Stick.blend

I have encountered an issue regarding strokes.
I cannot erase strokes that I drew yesterday.
Materials are not locked.
Attached is the file.

After changing the origin the strokes cannot be changed in any way using different tools including eraser or sculpt. [Stick.blend](https://archive.blender.org/developer/F13316180/Stick.blend) I have encountered an issue regarding strokes. I cannot erase strokes that I drew yesterday. Materials are not locked. Attached is the file.
Author

Added subscriber: @triangle4

Added subscriber: @triangle4
Author

~~I have discovered the cause. ~~
- Draw a stroke
- Go to object mode
- Go to object -> apply -> all transforms
- Go to object -> set origin -> origin to geometry

Might be useful to remove this feature otherwise people who are used to applying transforms and centering their pivot may lose days of work.

~~I have discovered the cause. ~~ ~~- Draw a stroke~~ ~~- Go to object mode~~ ~~- Go to object -> apply -> all transforms~~ ~~- Go to object -> set origin -> origin to geometry~~ ~~Might be useful to remove this feature otherwise people who are used to applying transforms and centering their pivot may lose days of work.~~
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Thanks for the report. I've not been able to replicate this in 3.3
In which blender version you're experiencing this?

I cannot erase strokes that I drew yesterday.

Are we talking about the same erase tool from the draw mode of GPencil object?

Thanks for the report. I've not been able to replicate this in 3.3 In which blender version you're experiencing this? > I cannot erase strokes that I drew yesterday. Are we talking about the same erase tool from the draw mode of GPencil object?
Author

This comment was removed by @triangle4

*This comment was removed by @triangle4*
Author

I am talking about the erase tool in draw mode.
I am using the latest Stable version, reinstalled today, 3.2.1.

If you open the supplied file, are you able to use the grease pencil to erase the elements in any frame but the last frame using the erase tool in draw mode?

I am talking about the erase tool in draw mode. I am using the latest Stable version, reinstalled today, 3.2.1. If you open the supplied file, are you able to use the grease pencil to erase the elements in any frame but the last frame using the erase tool in draw mode?
Member

Thanks for the information. Yes, I can erase last frame too. Can you share the screen recording of the problem you're experiencing.
I suspect you're seeing strokes of the previous frame(the one in green color), which you can disable from Viewport overlays > Onion Skin: https://docs.blender.org/manual/en/latest/grease_pencil/properties/onion_skinning.html

Thanks for the information. Yes, I can erase last frame too. Can you share the screen recording of the problem you're experiencing. I suspect you're seeing strokes of the previous frame(the one in green color), which you can disable from Viewport overlays > Onion Skin: https://docs.blender.org/manual/en/latest/grease_pencil/properties/onion_skinning.html
Author

Here is a quick video: https://youtu.be/DRSjRDRWTh8

I recant what I said about reproducing it in a new file. That is not 100% accurate.
The video outlines what I am experiencing.

Also, I am developer too, so I understand how difficult a bug like this can be to diagnose. Should I have any new information, I will share it.

Here is a quick video: https://youtu.be/DRSjRDRWTh8 I recant what I said about reproducing it in a new file. That is not 100% accurate. The video outlines what I am experiencing. Also, I am developer too, so I understand how difficult a bug like this can be to diagnose. Should I have any new information, I will share it.

Added subscriber: @antoniov

Added subscriber: @antoniov

@triangle4 Could you test if this fix your problem?

image.png

@triangle4 Could you test if this fix your problem? ![image.png](https://archive.blender.org/developer/F13318045/image.png)

I can replicate and I think I know what is the reason and it's related to change the origin of the object.

I can replicate and I think I know what is the reason and it's related to change the origin of the object.
Antonio Vazquez self-assigned this 2022-07-26 10:45:55 +02:00
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

In #99979#1395547, @antoniov wrote:
I can replicate and I think I know what is the reason and it's related to change the origin of the object.

Thanks for looking into this report Antonio :)
I'll mark this report as confirmed (I haven't tested this since my last message)

> In #99979#1395547, @antoniov wrote: > I can replicate and I think I know what is the reason and it's related to change the origin of the object. Thanks for looking into this report Antonio :) I'll mark this report as confirmed (I haven't tested this since my last message)
Antonio Vazquez changed title from Cannot Erase Existing Grease Pencil Strokes, No Materials Locked to GPencil strokes cannot be edited after set origin 2022-07-26 10:52:04 +02:00

This issue was referenced by 6d24de6c43

This issue was referenced by 6d24de6c4336365330d285ba133f606c15f0dd21

This issue was referenced by 0167920d0b

This issue was referenced by 0167920d0bde3187a7ffb75d04541ece8c725a86

This issue was referenced by c597d6cb64

This issue was referenced by c597d6cb6477aeddc539eeff596ade75a631dfc9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99979
No description provided.