Fix T99979: GPencil strokes cannot be edited after set origin

The stroke points were changed but the bounding box calculation was not done and this produced a problem in any bounding box check done by different tools.